# epubreader-cli

./: Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs
