[package]
name = "epubreader-cli"
version = "0.1.0"
edition = "2021"
description = "A terminal-based EPUB reader with vim-style keybindings"
license = "MIT"
repository = "https://github.com/zengwenjie128/epub-reader"
keywords = ["epub", "tui", "reader", "terminal", "ratatui"]
authors = ["zengwenjie128"]

[dependencies]
epub = "2"
html2text = "0.12"
ratatui = "0.28"
crossterm = "0.28"

[profile.release]
strip = true    
lto = true     